Use error-prone compiler plugin; fix (some of) the warnings